hahhhhuuuh... unit testing for unauthenticated GET endpoints completed and working API tested
